# OpenUSD-Code-Samples

./: .gitignore  CODE-SAMPLE-GUIDELINES.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.py  build_docs.py  pyproject.toml  requirements.txt
.github/workflows/: pull_request.yml
example-category/example-code-sample/: config.toml  cpp_usdrt.cpp  py_kit_cmds.md  py_kit_cmds.py  py_omni_usd.md  py_omni_usd.py  py_usd.md  py_usd.py  py_usd_var1.py  py_usdrt.md  py_usdrt.py  usda.md
old_build_scripts/: build-abbreviated_md_names.py  build-old-jupyter.py
orig/: python-snippets.rst
orig/python-snippets/cameras/: create-orthographic-camera.rst  create-perspective-camera.rst
orig/python-snippets/data-types/: convert-vtarray-numpy.rst
orig/python-snippets/hierarchy-traversal/: find-prim-by-name.rst  find-prims-by-type.rst  get-prim-child.rst
orig/python-snippets/inherits/: add-inherit.rst
orig/python-snippets/layers/: add-sublayer.rst
orig/python-snippets/materials/: create-mdl-material.rst  create-usdpreviewsurface-material.rst
orig/python-snippets/paths/: concatenate-prim-path.rst  concatenate-property-with-prim-path.rst  get-parent-path.rst
orig/python-snippets/prims/: check-prim-exists.rst
orig/python-snippets/properties/: add-relationship-target.rst  check-property-exists.rst  create-attribute.rst  create-relationship.rst  get-attribute-value.rst  get-relationship-targets.rst  set-attribute.rst
orig/python-snippets/references-payloads/: add-payload.rst  add-reference.rst  create-payload.rst  create-reference.rst
orig/python-snippets/specializes/: add-specialize.rst
orig/python-snippets/stage/: get-current-stage.rst  set-default-prim.rst  set-stage-linear-units.rst  set-stage-up-axis.rst
orig/python-snippets/transforms/: compute-prim-bounding-box.rst  get-local-transforms.rst  get-world-transforms.rst
orig/python-snippets/variant-sets/: author-variant-data.rst  create-variant-set.rst  select-variant.rst
source/: category-display-names.toml  template.rst
source/cameras/create-orthographic-camera/: header.md  (+8 more)
source/create-material-mesh/: README.md  config.toml  main.ipynb  main.py
sphinx/: conf.py  index.rst  usd_header.rst
(+301 files in other folders)
